--- a/res/layout/beer_row.xml
+++ b/res/layout/beer_row.xml
@@ -4,7 +4,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp">
+                android:paddingLeft="10dp"
+                >
 
     <ImageView android:id="@+id/beer_thumbnail"
                android:src="@drawable/beer_dog_default"
