--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-        >
+                android:paddingTop="6dp">
 
-    <ImageButton
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:src="@drawable/ic_new_beer"
-            android:onClick="addNewBeer"
-            android:contentDescription="@string/new_beer_title"
-            />
-
-    <fragment android:name="com.bardo.fragment.BeerListFragment"
+    <fragment
+            android:name="com.bardo.fragment.BeerListFragment"
             android:id="@+id/beerlist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
