--- a/res/menu/start_menu.xml
+++ b/res/menu/start_menu.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/sorting"
+          android:icon="@drawable/ic_action_sort_desc"
+          android:showAsAction="always"
+          android:onClick="toggleBeernameSorting"
+          />
     <item
             android:id="@+id/searchBeer"
             android:icon="@drawable/ic_action_search"
